# crypto-insight-mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agent_demo/: demo.py
docs/: architecture.md
docs/adr/: 0001-python-mcp-sdk-and-src-layout.md  0002-embedded-chroma-and-local-embeddings.md  0003-guardrails-and-retrieved-chunks-pattern.md
knowledge_base/: aml-kyc-basics.md  crypto-custody-basics.md  exchange-listing-policy.md  mica-overview.md
src/crypto_insight_mcp/: __init__.py  api.py  guardrails.py  server.py  services.py
src/crypto_insight_mcp/market/: __init__.py  client.py
src/crypto_insight_mcp/rag/: __init__.py  embeddings.py  ingest.py  search.py
tests/: conftest.py  test_guardrails.py  test_market.py  test_portfolio.py  test_rag.py  test_server.py
